# TweakMind

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: 00_PROJECT_CONTEXT.md  01_PRODUCT_BIBLE.md  02_MVP_SPEC.md  03_KNOWLEDGE_WRITING_STANDARD.md  03_PROJECT_STATUS.md  04_ENGINEERING_GUIDE.md  04_OPTIMIZATION_KNOWLEDGE_TEMPLATE.md  05_PRODUCT_BACKLOG.md
scripts/: check-versions.mjs  versionConsistency.mjs  versionConsistency.test.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: router.tsx
src/components/apply/: ApplyModeBadge.tsx
src/components/common/: EmptyState.tsx  LoadingState.tsx
src/components/dashboard/: DashboardCard.tsx
src/components/decision/: BulletListSection.tsx  DecisionSection.tsx  OptimizationWorkflowStrip.tsx  RecommendationBadge.tsx  RecoveryPanel.tsx
src/components/error/: ErrorPresentation.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/onboarding/: OnboardingGate.tsx
src/components/page/: PageTitle.tsx
src/pages/: AboutPage.tsx  ApplyConfirmationPage.tsx  ApplyPage.tsx  DashboardPage.tsx  DecisionPage.tsx  HistoryPage.tsx  KnowledgeDetailPage.tsx  KnowledgePage.tsx  OnboardingPage.tsx  RecoveryConfirmationPage.tsx  RecoveryPage.tsx  ReportPage.tsx  ScanPage.tsx  SettingsPage.tsx  VerificationPage.tsx
src/styles/: design-tokens.css  globals.css
src/types/: optimization.ts
(+111 files in other folders)
