[package]
name = "tweakmind"
version = "0.1.0"
description = "AI-assisted Windows Optimization Decision Tool"
authors = ["TweakMind contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_Services"
] }
